--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,14 @@
   --font-noto: "Noto Sans", sans-serif;
   --header-height: 145px;
 }
+
+/* Hide number input arrows */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield; /* Firefox */
+}
